# docs/swagger.json
@@ -44,6 +44,90 @@
                 }
             }
         },
+        "/case/getAll": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "case"
+                ],
+                "summary": "接案查詢",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "接案查詢",
+                        "name": "case",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
+        "/case/getDetail/{caseid}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "case"
+                ],
+                "summary": "案件詳細資料",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "案件詳細資料",
+                        "name": "case",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
+        "/download/{filename}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "file"
+                ],
+                "summary": "下載檔案",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "下載檔案",
+                        "name": "files",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                }
+            }
+        },
         "/member/login": {
             "post": {
                 "produces": [
@@ -269,6 +353,15 @@
                 "extension": {
                     "type": "string",
                     "example": "0000"
+                },
+                "filesName": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "[a.jpg]"
+                    ]
                 },
                 "kind": {
                     "type": "string",
